--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(../src/Images/daoarj9-eeca0f14-698f-4ddb-9083-dadc70f35dc2.png); 
 }
 
 code {
