--- a/src/AskAppi/AskAppi.css
+++ b/src/AskAppi/AskAppi.css
@@ -1,19 +1,16 @@
 .containerCardPokemon {
-  margin: 0 40px 20px 40px;
-  width: 400px;
-  display: grid;
+  margin: auto;
 }
 .containerCardPokemon li {
   list-style: none;
   font-weight: bold;
   margin-bottom: 4px;
   cursor: pointer;
+  text-align: center;
 }
 
 .containerCardPokemon li:hover {
   color: white;
-  font-size: 20px;
- 
 }
 
 .containerImg {
@@ -21,16 +18,10 @@
 }
 
 .containerImg img {
-  width: 90px;
-  height: 50px;
-  margin: auto;
-}
-
-
-.containerImg img:hover  {
-  width: 100px;
-  height: 70px;
+  border-image: repeat;
   cursor: pointer;
-  opacity:0.4;
-  filter:alpha(opacity=40);
+  width: 90px;
+  height: 90px;
+  margin: auto;
+  filter: saturate(240%);
 }
