--- a/src/AskCard/AskCard.css
+++ b/src/AskCard/AskCard.css
@@ -1,8 +1,8 @@
 .cardLayout {
   margin: 40px auto;
   width: auto;
-  padding: 50px 80px;
-  height: 450px;
+  padding: 8px 60px;
+  height: auto;
   border: solid 5px #c0ceff;
   border-radius: 13px;
   background: #7881c4;
@@ -10,28 +10,30 @@
 }
 
 .containerAskCard {
-  margin: 50px auto;
+  margin: auto;
   width: 100%;
-  height: 350px;
 }
 
 .containerAskCard h1 {
-  margin-top: 24px;
+  margin-top: 8px;
+  color: white;
+  text-transform: uppercase;
   list-style: none;
   text-align: center;
   font-weight: bold;
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 .imgs {
   width: 200px;
-  height: 100px;
+  height: 200px;
+  filter: saturate(240%);
 }
 
 .figures {
-  object-fit: cover;
-  margin: 20px auto;
+  margin: auto;
 }
 
 .containerAskCard .figures {
@@ -44,17 +46,21 @@
 }
 
 .containerHabilities li {
-  margin-left: 24px;
+  color: white;
+  text-shadow: black 0.1em 0.1em 0.2em;
   margin-bottom: 4px;
   list-style: none;
   font-size: 20px;
   font-weight: 1000;
   font-family: sans-serif;
+  justify-self: center;
+  width: auto;
 }
 .containerHabilities .bold {
   color: white;
   font-size: 20px;
   font-weight: 500;
+  margin-left: 6px;
 }
 
 .containerHabilities .lifeBar::-webkit-progress-bar {
@@ -67,9 +73,42 @@
   margin-left: 16px;
   background-color: transparent;
 }
+.atributePokemon {
+  margin-right: 8px;
+}
 
 .containerHabilities .lifeBar::-webkit-progress-value {
   border-radius: 50px;
   background: #99c41d;
 }
 
+@media (max-width: 1150px) {
+  .containerHabilities {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    width: 290px;
+  }
+}
+@media (max-width: 550px) {
+  .containerAskCard h1 {
+    font-size: 2rem;
+  }
+  .cardLayout {
+    width: auto;
+    padding: 8px 10px;
+  }
+
+  .containerHabilities .lifeBar {
+    margin-left: 0;
+    background-color: transparent;
+  }
+  .healtAttribute {
+    display: block;
+    text-align: center;
+  }
+  .containerHabilities {
+    width: 180px;
+  }
+}
