--- a/src/CardLayout/CardLayout.css
+++ b/src/CardLayout/CardLayout.css
@@ -1,21 +1,33 @@
-
-.containerPokeballSelect{
+.containerPokeballSelect {
   width: 100%;
   height: 425px;
   display: grid;
   place-content: center;
 }
-.pokeballSelect{
-  margin-top: 400px;
+.pokeballSelect {
+  margin-top: 50px;
   margin-left: 100px;
-  width: 600px;
-  height: 900px;
+  width: 400px;
+  height: 500px;
+  filter: saturate(240%);
 }
 
 @media (max-width: 1100px) {
-  .pokeballSelect{
+  .pokeballSelect {
     margin-top: 0px;
-    width: 300px;  
+    width: 300px;
     height: 400px;
-  } 
+  }
+}
+@media (max-width: 550px) {
+  .pokeballSelect {
+    margin-left: 0;
+    width: 200px;
+    height: 300px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .containerPokeballSelect {
+    height: auto;
+  }
 }
