--- a/src/MainContent/MainContent.css
+++ b/src/MainContent/MainContent.css
@@ -1,29 +1,28 @@
 .mainContent {
-  width: auto;
   border: solid 4px #c0ceff;
   margin: 160px 1%;
   display: flex;
   border-radius: 13px;
   background: #e34a4a;
-  box-shadow:  20px 20px 27px #5b1e1e,
-               -20px -20px 27px #ff7676;
+  box-shadow: 20px 20px 27px #5b1e1e, -20px -20px 27px #ff7676;
 }
 
 .containerPokemon {
   margin: 20px 25px 20px 50px;
   width: auto;
+  padding: 40px 40px 10px 40px;
   height: 90%;
   border: solid 5px #c0ceff;
   border-radius: 13px;
   background: #7881c4;
-  box-shadow: inset 20px 20px 27px #30344e,
-              inset -20px -20px 27px #c0ceff;
-  
+  box-shadow: inset 20px 20px 27px #30344e, inset -20px -20px 27px #c0ceff;
 }
 .mainContent h1 {
   text-align: center;
   font-size: 1.5rem;
   margin: 12px 0;
+  color: white;
+  text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 .search {
@@ -31,9 +30,8 @@
   background: #f9fbfc;
   border-radius: 2px;
   border: 2px solid #202329;
-  margin: 0 24px;
   height: 48px;
-  width: calc(100% - 62px);
+  width: 100%;
   font-size: 24px;
   text-align: center;
   font-family: "Montserrat";
@@ -54,13 +52,19 @@
 .containerSearch {
   height: 80px;
 }
-@media (max-width: 1100px) {
+
+@media (max-width: 1150px) {
   .mainContent {
     display: block;
- 
   }
   .imgs {
     width: 800px;
     height: 100px;
+  }
+}
+@media (max-width: 550px) {
+  .containerPokemon {
+    margin: 0;
+    padding: 20px;
   }
 }
